--- a/ApiToDo/Properties/launchSettings.json
+++ b/ApiToDo/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7037;http://localhost:5214"
+      "applicationUrl": "https://localhost:8081;http://localhost:5214"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -34,7 +34,8 @@
       "launchUrl": "https://localhost:8081/swagger",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "publishAllPorts": true,
       "useSSL": true
