--- a/ApiToDo/appsettings.json
+++ b/ApiToDo/appsettings.json
@@ -1,9 +1,23 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Error",
+      "Microsoft": "Warning"
+    },
+    "Debug": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.Hosting": "Trace"
+      }
+    },
+    "EventSource": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server=mssql-server,1433;Initial Catalog = TodoDb;User ID=SA;Password=numsey#2021;TrustServerCertificate=True;"
+  }
 }
