--- a/ApiToDo/appsettings.json
+++ b/ApiToDo/appsettings.json
@@ -1,19 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Error",
-      "Microsoft": "Warning"
-    },
-    "Debug": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.Hosting": "Trace"
-      }
-    },
-    "EventSource": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*",
